--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@google/maps": "^0.4.5",
     "bluebird": "^3.5.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
