--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "mongoose": "^4.11.13",
+    "mongoose-auto-increment": "^5.0.1",
     "mongoose-paginate": "^5.0.3",
     "morgan": "~1.7.0",
     "node-uuid": "^1.4.8",
@@ -21,7 +22,8 @@
     "passport-facebook": "^2.1.1",
     "passport-http-bearer": "^1.0.1",
     "passport-vkontakte": "^0.3.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
