--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
+    "test:err": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
     "start:dev": "nodemon ./bin/www"
   },
