--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
   - rabbitmq
 before_install:
   - echo "install"
+  - PATH=`echo $PATH | sed -e 's/:\.\/node_modules\/\.bin//g'`
   - find . -name ".env.sample" -execdir cp {} .env \; 
 install:
   - npm install
