--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,14 @@ matrix:
         - npm install
       script:
         - npm run test
+
+
+  include:
+    - language: python
+      python: 3.4
+      before_script:
+        - echo "before script for python"
+      install:
+        - echo "installing python deps"
+      script:
+        - echo "running py tests"
